# duckdb-viewer

./: .gitignore  CLAUDE.md  README.md  angular.json  create_sample.sql  package-lock.json  package.json  sample.duckdb
docs/: design.md  requirements.md  tasks.md
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  export.rs  lib.rs  main.rs  models.rs
src/app/: app.config.ts  app.spec.ts  app.ts
src/app/components/dashboard/: confirm-dialog.component.ts  dashboard.component.ts  input-dialog.component.ts  widget-dialog.component.ts
src/app/components/data-table/: data-table.component.ts
src/app/components/schema-viewer/: schema-viewer.component.ts
src/app/components/sidebar/: sidebar.component.ts
src/app/components/sql-editor/: sql-editor.component.ts
src/app/components/toolbar/: toolbar.component.ts
src/app/models/: database.model.ts
src/app/services/: dashboard.service.ts  database.service.ts  export.service.ts  query.service.ts  tauri.service.ts
