[package]
name = "duckdb-viewer"
version = "0.1.0"
description = "DuckDB Data Viewer and Management Tool"
authors = ["ysksm"]
license = "MIT"
repository = "https://github.com/ysksm/duckdb-viewer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "duckdb_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# DuckDB
duckdb = { version = "1.4.3", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Export formats
csv = "1.3"
rust_xlsxwriter = "0.80"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID for unique IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/time handling
chrono = "0.4"
